--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
+        submodules: true
+        
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
