--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -57,12 +57,13 @@ jobs:
         shell: pwsh
         run: |
             Compress-Archive -Path "${{ env.DllName }}\${{ env.DllName }}.dll" -DestinationPath ${{ env.DllName }}.zip
-   
+
+     # TODO: This isn't working in this project repo
       # Create release as draft from the compressed file
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
-        with:
-            generate_release_notes: true
-            files: ${{ env.DllName }}.zip
-            token: ${{ secrets.PAT_KEY }}
-            tag_name: v${{ steps.extract-version.outputs.VERSION }}
+      #- name: Create Release
+      #  uses: softprops/action-gh-release@v2
+      #  with:
+      #      generate_release_notes: true
+      #      files: ${{ env.DllName }}.zip
+      #      token: ${{ secrets.PAT_KEY }}
+      #      tag_name: v${{ steps.extract-version.outputs.VERSION }}
